# vorteX

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  install.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
tests/: test_api_discovery.py  test_bypass403.py  test_cors.py  test_crawler.py  test_crlf_scanner.py  test_ct_enum.py  test_full_recon.py  test_fuzzer.py  test_headers.py  test_http_probe.py  test_js_discovery.py  test_lfi_scanner.py  test_new_cli_flags.py  test_param_fuzzer.py  test_payloads.py  test_proxy_manager.py  test_redirect.py  test_seclists.py  test_sensitive.py  test_sqli_scanner.py  test_ssrf_scanner.py  test_ssti_scanner.py  test_subdomain.py  test_takeover.py  test_tech_fingerprinting.py  test_utils.py  test_waf_detector.py  test_wayback.py  test_wordlists.py  test_xss_scanner.py  test_xxe_scanner.py
vortex/: api_discovery.py  bypass403.py  cors_scanner.py  crawler.py  crlf_scanner.py  ct_enum.py  dns_records.py  email_harvester.py  full_recon.py  fuzzer.py  header_audit.py  http_probe.py  js_discovery.py  lfi_scanner.py  main.py  open_redirect.py  param_fuzzer.py  port_scanner.py  proxy_manager.py  seclists.py  sensitive_files.py  sqli_scanner.py  ssl_analysis.py  ssrf_scanner.py  ssti_scanner.py  subdomain.py  takeover.py  tech_fingerprinting.py  user_agents.py  utils.py  waf_detector.py  wayback.py  xss_scanner.py  xxe_scanner.py
vortex/payloads/: __init__.py  crlf.txt  lfi.txt  sqli.txt  ssrf.txt  ssti.txt  xss.txt  xxe.txt
vortex/wordlists/: __init__.py  directories.txt  parameters.txt  subdomains.txt
