[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vortex-recon"
version = "2.0.0"
description = "vorteX - Advanced Async Reconnaissance & Fuzzing Tool"
authors = [{name = "SriRameshNaidu Kusu"}]
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.8",
    "aiodns>=3.0",
    "requests>=2.28",
    "beautifulsoup4>=4.11",
    "colorama>=0.4",
    "pyfiglet>=0.8",
    "tqdm>=4.64",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
]

[project.scripts]
vorteX = "vortex.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["vortex*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]
